welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:4: error: value lenght is not a member of Array[java.awt.Color]
  for (i<-0 to T.lenght-1){
                 ^Array1:8: error: not found: value gatMondeHauteur
  for (i<- 1 to gatMondeHauteur){
                ^Array1:10: error: not found: value gatMondeLargeur
  for (i<-1 to gatMondeLargeur){
               ^Array1:14: error: value lenght is not a member of Array[java.awt.Color]
    for (j<-0 to T.lenght-1){
                   ^